@@ -251,7 +251,8 @@ namespace Orthanc
                                   T_DIMSE_Message * msg, 
                                   T_ASC_PresentationContextID presID,
                                   IStoreRequestHandler& handler,
-                                  const std::string& remoteIp)
+                                  const std::string& remoteIp,
+                                  int timeout)
   {
     OFCondition cond = EC_Normal;
     T_DIMSE_C_StoreRQ *req;
@@ -294,8 +295,8 @@ namespace Orthanc
 
     cond = DIMSE_storeProvider(assoc, presID, req, NULL, /*opt_useMetaheader*/OFFalse, &dset,
                                storeScpCallback, &data, 
-                               /*opt_blockMode*/ DIMSE_BLOCKING, 
-                               /*opt_dimse_timeout*/ 0);
+                               /*opt_blockMode*/ (timeout ? DIMSE_NONBLOCKING : DIMSE_BLOCKING),
+                               /*opt_dimse_timeout*/ timeout);
 
     // if some error occured, dump corresponding information and remove the outfile if necessary
     if (cond.bad())
